[tool.poetry]
name = "qmlcourse.ai"
version = "0.1.1"
description = ""
authors = ["SemyonSinchenko <semyonsinchenko@yahoo.com>"]
license = "CCBY-4.0"

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
cirq = "^0.11.0"
dwave-system = "^1.10.0"
dwavebinarycsp = "^0.1.3"
jupyter-book = "^0.10.1"
matplotlib = "^3.3.4"
networkx = "^2.6.3"
numpy = "^1.19.2"
paramiko = "^2.8.0"
penaltymodel-maxgap = "^0.5.5"
PennyLane = "^0.18.0"
pre-commit = "^2.13.0"
pylatexenc = "^2.10"
pyppeteer  = "^0.2.6"
pyyaml  = "^5.4.1"
qiskit = "^0.31.0"
scikit-learn = "^0.24.1"
scp = "^0.14.1"
sympy = "1.5"
netket = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
