[tool.poetry]
name = "qmlcourse"
version = "2.0.0"
description = ""
authors = ["Quantum Machine Learning Community Course <qmlcourse.ods@gmail.com>"]
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
cirq = "0.11.0"
dwave-system = "^1.10.0"
dwavebinarycsp = "^0.1.3"
jupyter-book = "0.13.1"
matplotlib = "^3.6.3"
networkx = "^2.6.3"
numpy = "1.22"
paramiko = "^3.0.0"
penaltymodel-maxgap = "^0.5.5"
PennyLane = "0.20.0"
pylatexenc = "^2.10"
pyppeteer  = "^0.2.6"
pyyaml  = "^5.4.1"
qiskit = "^0.31.0"
scikit-learn = "^1.2.0"
scp = "^0.14.1"
sympy = "1.8"
netket = "^3.5"
sphinx-sitemap = "^2.4.0"
sphinx-jupyterbook-latex = "^0.4.6"
tensorflow = "2.8.4"
tensorflow-quantum = "0.6.0"
Jinja2 = "3.0.3"
future = "0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
